--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 /* Can be forced with data-theme="light" */
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
-  --primary: #13C265;
+  --primary: #13c265;
   --primary-hover: rgb(17, 163, 85);
   --primary-focus: rgba(19, 194, 101, 0.125);
   --primary-inverse: #FFF;
