--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html{
   background-color: #E5E5E5;
 }
 
-nav {
+nav, footer {
   background-color: var(--background-color);
   box-shadow: -24px 0px 80px rgba(49, 79, 124, 0.02);
 }
